criando Delete no swagger
